# math-ai-agent

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  OLLAMA.md  README.md  RELEASE.md  SETUP.md  TODO.md  llms.txt  pyproject.toml  todo.txt
.claude/commands/: release-plan.md
docs/: oauth21.drawio  release-plan-v0.0.1.md  release-plan-v0.0.10.md  release-plan-v0.0.11.md  release-plan-v0.0.12.md  release-plan-v0.0.13.md  release-plan-v0.0.14.md  release-plan-v0.0.15.md  release-plan-v0.0.2.md  release-plan-v0.0.3.md  release-plan-v0.0.4.md  release-plan-v0.0.5.md  release-plan-v0.0.6.md  release-plan-v0.0.7.md  release-plan-v0.0.8.md  release-plan-v0.0.9.md
scripts/: test_github.sh
src/math_ai_agent/: app.py  calc_mcp_client.py  config.py  config.yaml  llm.py  main.py  mcp_calc.py  models.py
src/math_ai_agent/llm/: __init__.py  llm.py
src/math_ai_agent/mcp/: __init__.py  calc_client.py
src/math_ai_agent/static/: index.html
tests/: __init__.py  test_app.py  test_calc_client.py  test_calc_mcp_client.py  test_config.py  test_llm.py  test_main.py  test_mcp_calc.py
tests/integration/: __init__.py  app.py  app_text.txt  calc_mcp_client.py  openai_client.py  test_app.py  test_calc_client.py  test_calc_mcp_client.py  test_llm.py  test_llm_tool.py  test_openai_client.py
