[project]
name = "math-ai-agent"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "math_ai_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
